# storageCat

./: LICENSE  README.md  pyproject.toml
storageCat/: __init__.py  classes.py  cli.py
