[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "storageCat"
version = "1.0.1"
description = "A CLI tool for creating and submitting SciCat dataset entries"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ryan", email = "ryan.odea@psi.ch"}
]
keywords = ["scicat", "data-management", "metadata", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
]

[project.scripts]
storageCat = "storageCat.cli:cli"

[project.urls]
Homepage = "https://github.com/ryan-odea/storageCat"
Repository = "https://github.com/ryan-odea/storageCat"

[tool.setuptools.packages.find]
where = ["."]
include = ["storageCat*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
